--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
   <section id="press">
-    <img class="logo-img" src="images/techcrunch.png" alt="tc-logo">
+    <img class="logo-img" src="images/TechCrunch.png" alt="tc-logo">
     <img class="logo-img" src="images/tnw.png" alt="tnw-logo">
     <img class="logo-img" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="logo-img" src="images/mashable.png" alt="mashable-logo">
@@ -228,7 +228,7 @@
     <i class="fa-brands fa-facebook-f"></i>
     <i class="fa-brands fa-instagram"></i>
     <i class="fa-solid fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2022 TinDog</p>
 
   </footer>
 
